--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     },
     "scripts": {
         "start": "webpack-dev-server --progress --colors --hot --inline --config webpack.js",
-        "dist": "webpack --config webpack.js"
+        "dist": "webpack --config webpack.js",
+        "boot": "node src/services/index.js"
     },
     "private": true,
     "devDependencies": {
@@ -21,6 +22,7 @@
         "browser-sync": "^2.11.0",
         "browserify": "^13.0.0",
         "html-webpack-plugin": "^2.22.0",
+        "koa-static": "^2.0.0",
         "pretty-hrtime": "^1.0.1",
         "react-hot-loader": "^3.0.0-beta.3",
         "require-dir": "^0.3.0",
