--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     },
     "private": true,
     "devDependencies": {
+        "babel-eslint": "^6.1.2",
+        "eslint": "^2.9.0",
+        "eslint-plugin-import": "^1.8.1",
+        "eslint-plugin-jsx-a11y": "^1.5.3",
+        "eslint-plugin-react": "^5.2.2",
         "babel-core": "^6.14.0",
         "babel-loader": "^6.2.5",
         "babel-plugin-react-html-attrs": "^2.0.0",
