--- a/package.json
+++ b/package.json
@@ -1,63 +1,68 @@
 {
-  "name": "material-ui-example-browserify",
-  "version": "0.15.0",
-  "description": "Sample project that uses Material-UI",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/callemall/material-ui.git"
-  },
-  "scripts": {
-    "start": "webpack-dev-server --progress --colors --hot --inline --config webpack.js",
-    "dist": "webpack --config webpack.js"
-  },
-  "private": true,
-  "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-react-html-attrs": "^2.0.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.11.0",
-    "browserify": "^13.0.0",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "pretty-hrtime": "^1.0.1",
-    "react-hot-loader": "^3.0.0-beta.3",
-    "require-dir": "^0.3.0",
-    "sass-loader": "^4.0.2",
-    "underscore": "^1.8.3",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^3.6.1",
-    "webpack-dev-server": "^1.16.2"
-  },
-  "dependencies": {
-    "ajv": "^4.6.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-es2015-modules-umd": "^6.12.0",
-    "babel-plugin-transform-function-bind": "^6.8.0",
-    "case-sensitive-paths-webpack-plugin": "^1.1.4",
-    "co": "^4.6.0",
-    "co-fs": "^1.2.0",
-    "css-loader": "^0.25.0",
-    "install": "^0.8.1",
-    "json-schema-faker": "^0.3.6",
-    "koa": "^1.2.2",
-    "koa-body": "^1.5.0",
-    "koa-router": "^5.4.0",
-    "node-sass": "^3.9.3",
-    "npm": "^3.10.7",
-    "precss": "^1.4.0",
-    "rc-menu": "^5.0.0",
-    "react-highlight": "^0.9.0",
-    "react-hot-loader": "^3.0.0-beta.3",
-    "react-redux": "^4.4.5",
-    "react-tabs": "^0.7.0",
-    "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.5.2",
-    "sass-loader": "^4.0.2",
-    "simplifr": "^0.2.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2"
-  }
+    "name": "Mock-platForm",
+    "version": "0.15.0",
+    "description": "full stack mock platform project with javascript",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/abnerCrack/mock-platform.git"
+    },
+    "scripts": {
+        "start": "webpack-dev-server --progress --colors --hot --inline --config webpack.js",
+        "dist": "webpack --config webpack.js",
+        "boot": "node src/services/index.js"
+    },
+    "private": true,
+    "devDependencies": {
+        "babel-eslint": "^6.1.2",
+        "eslint": "^2.9.0",
+        "eslint-plugin-import": "^1.8.1",
+        "eslint-plugin-jsx-a11y": "^1.5.3",
+        "eslint-plugin-react": "^5.2.2",
+        "babel-core": "^6.14.0",
+        "babel-loader": "^6.2.5",
+        "babel-plugin-react-html-attrs": "^2.0.0",
+        "babel-preset-es2015": "^6.14.0",
+        "babel-preset-react": "^6.3.13",
+        "babelify": "^7.2.0",
+        "browser-sync": "^2.11.0",
+        "browserify": "^13.0.0",
+        "html-webpack-plugin": "^2.22.0",
+        "koa-static": "^2.0.0",
+        "pretty-hrtime": "^1.0.1",
+        "react-hot-loader": "^3.0.0-beta.3",
+        "require-dir": "^0.3.0",
+        "sass-loader": "^4.0.2",
+        "underscore": "^1.8.3",
+        "vinyl-source-stream": "^1.0.0",
+        "watchify": "^3.6.1"
+    },
+    "dependencies": {
+        "ajv": "^4.6.1",
+        "babel-plugin-add-module-exports": "^0.2.1",
+        "babel-plugin-transform-es2015-modules-umd": "^6.12.0",
+        "babel-plugin-transform-function-bind": "^6.8.0",
+        "case-sensitive-paths-webpack-plugin": "^1.1.4",
+        "co": "^4.6.0",
+        "co-fs": "^1.2.0",
+        "css-loader": "^0.25.0",
+        "install": "^0.8.1",
+        "json-schema-faker": "^0.3.6",
+        "koa": "^1.2.2",
+        "koa-body": "^1.5.0",
+        "koa-router": "^5.4.0",
+        "node-sass": "^3.9.3",
+        "npm": "^3.10.7",
+        "precss": "^1.4.0",
+        "rc-menu": "^5.0.0",
+        "react-highlight": "^0.9.0",
+        "react-hot-loader": "^3.0.0-beta.3",
+        "react-redux": "^4.4.5",
+        "react-tabs": "^0.7.0",
+        "react-tap-event-plugin": "^1.0.0",
+        "redux": "^3.5.2",
+        "sass-loader": "^4.0.2",
+        "simplifr": "^0.2.1",
+        "style-loader": "^0.13.1",
+        "webpack": "^1.13.2"
+    }
 }
